Add infra and market diagrams

--- a/chapter10.tex
+++ b/chapter10.tex
@@ -6,7 +6,7 @@
 
 \section*{Conclusions}
 
-In conclusion, a cross-market battery optimization system has been successfully designed, developed, deployed, and validated across multiple installations on the iberian market. The system manages dozens of megawatt hours daily and generates millions of euros in expected annual revenue by cycling battery energy storage systems, as depicted in Figure~\ref{fig:arquitectura-sistema}, which satisfies the proposed main objective.
+In conclusion, a cross-market battery optimization system has been successfully designed, developed, deployed, and validated across multiple installations on the iberian market. The system manages dozens of megawatt hours daily and generates millions of euros in expected annual revenue by cycling battery energy storage systems, which satisfies the proposed main objective.
 
 In turn, from the perspective of the fulfillment of secondary objectives, the maximization of profitability has been sought through the optimization of market positions, together with the consideration of battery degradation, cycling them in a stable and controlled manner through the business logic of the modeling. Furthermore, regulatory requirements have been met, mainly defined by the system operator in the form of technical limits, thus avoiding possible financial penalties. The security of the operation has been guaranteed by deploying part of the integration with the physical infrastructure in an industrial demilitarized zone, preventing the exposure of energy asset information to unauthorized networks. Also, the design maintains a generalized architecture, being able to operate in multiple installations without any modification of the system's logic. Improved facilities have been provided for market agents and telecommunication operators to monitor the system, and automatic response to failures, such as the lack of availability, has also been taken into account. Finally, an economic feasibility analysis has been carried out, showing measurable results.
 
