--- a/chapter8.tex
+++ b/chapter8.tex
@@ -6,7 +6,7 @@
 \section{Conclusiones}%
 \label{makereference8.1}
 
-En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones de la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, representado en la figura~\ref{fig:arquitectura-sistema} y satisfaciendo así el objetivo principal propuesto.
+En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones de la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto.
 
 % TODO
 % \begin{figure}
