--- a/chapter3.tex
+++ b/chapter3.tex
@@ -23,17 +23,17 @@ Por ello, la principal contribución del apartado de la infraestructura operacio
 De esta forma, es posible obtener una visión más completa a través del análisis realizado en la sección~\ref{makereference3.1}, que define la arquitectura de la disposición de los activos energéticos y las múltiples restricciones operativas fundamentales tenidas en cuenta por el desarrollo. También, se examinan los componentes físicos que forman parte de la infraestructura al completo, detallados en la sección~\ref{makereference3.2}, que actúan como la fuente primaria de la obtención de datos. Además, se explora la comunicación que unifica estos componentes en la sección~\ref{makereference3.3},  facilitando un intercambio de datos estandarizado. Con esto, se describe la gestión de la información obtenida en la sección~\ref{makereference3.4}, detallando su rol en el almacenamiento, la gestión y la validación de los datos operativos. Por último, se explica como los datos de la infraestructura obtenidos son transformados y consumidos en la sección~\ref{makereference3.5}.
 
 % TODO
-% \begin{figure}
-%   \centering
-%   \includegraphics[width=0.5\linewidth]{figures/arquitectura-infraestructura.png}
-%   \caption[Arquitectura de la infraestructura operacional.]{Arquitectura de la infraestructura operacional.}%
-%   \label{fig:arquitectura-infraestructura}
-% \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/arquitectura-infraestructura.png}
+  \caption[Arquitectura de la infraestructura operacional.]{Arquitectura de la infraestructura operacional.}%
+  \label{fig:arquitectura-infraestructura}
+\end{figure}
 
 \section{Configuración topológica}%
 \label{makereference3.1}
 
-Resulta que en los \glspl{bess}, la efectividad operativa y la rentabilidad, esta última sobre todo, no dependen exclusivamente de la tecnología intrínseca utilizada o de la optimalidad de su operación, sino que están condicionadas fundamentalmente por su configuración topológica.
+Resulta que en los \glspl{bess}, la efectividad operativa y la rentabilidad, esta última sobre todo, no dependen exclusivamente de la tecnología intrínseca utilizada o de la optimidad de su operación, sino que están condicionadas fundamentalmente por su configuración topológica.
 
 Esta disposición es absolutamente necesaria para llegar a comprender el funcionamiento de la representación operacional de las plantas, ya que una de las principales motivaciones del desarrollo del sistema ha resultado ser la intención de aprovechar las ventajas de que brindan las topologías más avanzadas e integradas con el resto de activos, como lo es la topología híbrida aquí descrita. Posteriormente, en el apartado~\ref{makereference5} de modelización estructural se describe la implementación de la lógica topológica y en el apartado~\ref{makereference7} de resultados experimentales las diferencias en la operación de las topologías.
 
