--- a/chapter4.tex
+++ b/chapter4.tex
@@ -23,12 +23,12 @@ Con esto, para facilitar la comprensión de las secciones posteriores, se define
 Para ello, primeramente se presenta \gls{omie} como la fuente primordial de datos de mercado, detallando los mecanismos de obtención de precios y la naturaleza de la información de la energía negociada, como se describe en el apartado~\ref{makereference4.1}. A continuación, se habla de la información proveniente de \gls{ree}, que impone las limitaciones de programa de operación en tiempo real, como se explica en la sección~\ref{makereference4.2}. Finalmente, el apartado~\ref{makereference4.3} detalla como se consolidan estas diversas fuentes de datos para formar una visión unificada que sirva de entrada al sistema.
 
 % TODO
-% \begin{figure}
-%   \centering
-%   \includegraphics[width=0.5\linewidth]{figures/arquitectura-mercado.png}
-%   \caption[Arquitectura del entorno de mercado.]{Arquitectura del entorno de mercado.}%
-%   \label{fig:arquitectura-mercado}
-% \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[height=\textheight]{figures/arquitectura-mercado.png}
+  \caption[Arquitectura del entorno de mercado.]{Arquitectura del entorno de mercado.}%
+  \label{fig:arquitectura-mercado}
+\end{figure}
 
 \section{Operador del mercado}%
 \label{makereference4.1}
