--- a/chapter3.tex
+++ b/chapter3.tex
@@ -345,7 +345,7 @@ Se seleccionan únicamente las variables críticas para la operación de la bate
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/visualizacion-industrial-de-bateria.png}
-  \caption[Visualización industrial de señales de instalación.]{Visualización industrial de varias señales de una instalación.}%
+  \caption[Visualización industrial de señales de instalación.]{Visualización industrial de las señales de una instalación.}%
   \label{fig:visualizacion-industrial-de-bateria}
 \end{figure}
 
