--- a/chapter4.tex
+++ b/chapter4.tex
@@ -25,7 +25,7 @@ Para ello, primeramente se presenta \gls{omie} como la fuente primordial de dato
 % TODO
 \begin{figure}
   \centering
-  \includegraphics[height=\textheight]{figures/arquitectura-mercado.png}
+  \includegraphics[height=0.75\textheight]{figures/arquitectura-mercado.png}
   \caption[Arquitectura del entorno de mercado.]{Arquitectura del entorno de mercado.}%
   \label{fig:arquitectura-mercado}
 \end{figure}
