Add other diagrams

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -16,12 +16,12 @@ Se hace uso de una formulación de \gls{milp} para poder tener en cuenta condici
 De esta forma, se detallan los parámetros de decisión en la sección~\ref{makereference5.1}, que articulan el problema de optimización, abarcando desde la definición temporal de los periodos del mercado y las variables de operación de los flujos energéticos, hasta las limitaciones impuestas por el comportamiento físico de la batería y las guías estratégicas de las indicaciones de mercado. Se procede a formular las restricciones operacionales que aseguran la viabilidad técnica de la solución en la sección~\ref{makereference5.2}, se establece el criterio de desempeño que define la función objetivo a optimizar en la parte~\ref{makereference5.3} y, finalmente, se consideran los requisitos de la resolución numérica para cumplir con la precisión exigida por el operador del mercado en la sección~\ref{makereference5.4}.
 
 % TODO
-% \begin{figure}
-%   \centering
-%   \includegraphics[width=0.5\linewidth]{figures/arquitectura-modelizacion.png}
-%   \caption[Arquitectura de la modelización estructural.]{Arquitectura de la modelización estructural.}%
-%   \label{fig:arquitectura-modelizacion}
-% \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[height=0.75\textheight]{figures/arquitectura-modelizacion.png}
+  \caption[Arquitectura de la modelización estructural.]{Arquitectura de la modelización estructural.}%
+  \label{fig:arquitectura-modelizacion}
+\end{figure}
 
 \section{Parámetros de decisión}%
 \label{makereference5.1}
