--- a/chapter6.tex
+++ b/chapter6.tex
@@ -12,12 +12,12 @@ Más allá de las operaciones mismas, en entornos industriales donde se mueven g
 De esta forma, el apartado~\ref{makereference6.1} describe la operación automática del control de las consignas de la batería y las ofertas de mercado, mientras que el apartado~\ref{makereference6.2} detalla la implementación del cuadro de mando con el que supervisar la operación del sistema.
 
 % TODO
-% \begin{figure}
-%   \centering
-%   \includegraphics[width=0.5\linewidth]{figures/arquitectura-control.png}
-%   \caption[Arquitectura del comando y control.]{Arquitectura del comando y control.}%
-%   \label{fig:arquitectura-control}
-% \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/arquitectura-control.png}
+  \caption[Arquitectura del comando y control.]{Arquitectura del comando y control.}%
+  \label{fig:arquitectura-control}
+\end{figure}
 
 \section{Consignación operativa}%
 \label{makereference6.1}
