Add general diagram

--- a/chapter8.tex
+++ b/chapter8.tex
@@ -6,15 +6,15 @@
 \section{Conclusiones}%
 \label{makereference8.1}
 
-En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones de la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto.
+En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones de la entidad energética pertinente en la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto.
 
 % TODO
-% \begin{figure}
-%   \centering
-%   \includegraphics[width=0.5\linewidth]{figures/arquitecuta-sistema.png}
-%   \caption[Arquitectura del sistema.]{Arquitectura del sistema.}%
-%   \label{fig:arquitectura-sistema}
-% \end{figure}
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/arquitectura.png}
+  \caption[Arquitectura del sistema.]{Arquitectura del sistema.}%
+  \label{fig:arquitectura}
+\end{figure}
 
 A su vez, desde la perspectiva del cumplimiento de los objetivos secundarios, se ha buscado de la maximización de la rentabilidad mediante la optimización de las posiciones del mercado, junto con la consideración del desgaste de las baterías, ciclándolas de forma estable y controlada a través de la lógica de negocio de la modelización. Además, se han cumplido con los requisitos regulatorios, principalmente definidos por el operador del sistema en forma de límites técnicos, evitando así posibles penalizaciones económicas. Se ha garantizado la seguridad de la operación desplegando parte de la integración con la infraestructura física en una \gls{idmz}, evitando la exposición de la información de los activos energéticos a redes no autorizadas. También, el diseño mantiene una arquitectura generalizada, siendo capaz de operar en múltiples instalaciones sin modificación alguna de la lógica del sistema. Se han dado facilidades a los agentes de mercado y operadores de telecontrol para la monitorización del sistema y se ha tenido en cuenta la respuesta automática ante fallos, como la falta de disponibilidad. Finalmente, se ha efectuado un análisis de viabilidad económica donde se muestran resultados medibles.
 
