--- a/resumen.tex
+++ b/resumen.tex
@@ -8,7 +8,7 @@
 
 \vspace{1cm}
 
-En respuesta a la creciente adopción de los sistemas de almacenamiento de energía en baterías y la ausencia de soluciones actualmente en producción principalmente centradas en configuraciones topológicas híbridas, se define el diseño, desarrollo, despliegue y validación de \textsc{Optibat}, un sistema integral para la automatización del arbitraje en el mercado eléctrico. El sistema busca maximizar la rentabilidad económica comprando y vendiendo energía en los mercados spot mediante el control del ciclado de las baterías. Para ello, se integran datos operacionales en tiempo real de los activos energéticos con la información del entorno del operador del mercado y operador del sistema, empleando un modelo de programación lineal de enteros mixta para determinar la estrategia óptima de carga y descarga e interactuando directamente con los agentes de mercado y operadores de telecontrol. Desplegado con éxito en múltiples instalaciones a gran escala, \textsc{Optibat} gestiona docenas de megavatios hora diarios y genera millones de euros de ingresos anuales previstos. Los resultados experimentales demuestran que las topologías híbridas aplicadas son significativamente más rentables que las aisladas, destacando el sistema por su capacidad para aumentar el aprovechamiento de la generación energética. De esta forma, el proyecto aporta una solución robusta y escalable que valida el caso de negocio de las baterías, permitiendo su integración eficaz como activos óptimos y fiables en el mercado eléctrico.
+En respuesta a la creciente adopción de los sistemas de almacenamiento de energía en baterías y la ausencia de soluciones actualmente en producción principalmente centradas en configuraciones topológicas híbridas, se define el diseño, desarrollo, despliegue y validación de \textsc{Optibat}, un sistema integral para la automatización del arbitraje en el mercado eléctrico. El sistema busca maximizar la rentabilidad económica comprando y vendiendo energía en los mercados spot mediante el control del ciclado de las baterías. Para ello, se integran datos operacionales en tiempo real de los activos energéticos con la información del entorno del operador del mercado y operador del sistema, empleando un modelo de programación lineal de enteros mixta para determinar la estrategia óptima de carga y descarga e interactuando directamente con los agentes de mercado y operadores de telecontrol. Desplegado con éxito en múltiples instalaciones a gran escala de la entidad energética pertinente , \textsc{Optibat} gestiona docenas de megavatios hora diarios y genera millones de euros de ingresos anuales previstos. Los resultados experimentales demuestran que las topologías híbridas aplicadas son significativamente más rentables que las aisladas, destacando el sistema por su capacidad para aumentar el aprovechamiento de la generación energética. De esta forma, el proyecto aporta una solución robusta y escalable que valida el caso de negocio de las baterías, permitiendo su integración eficaz como activos óptimos y fiables en el mercado eléctrico.
 
 \vspace{1cm}
 
